[gd_scene load_steps=7 format=3 uid="uid://b2lev8if1jyqb"]

[ext_resource type="Script" path="res://core/state_machine.gd" id="1_fl3r1"]
[ext_resource type="Script" path="res://core/NO_SELECTION.gd" id="2_gw4fy"]
[ext_resource type="Script" path="res://core/PLAYER_UNIT_SELECT.gd" id="3_1o4my"]
[ext_resource type="Script" path="res://core/PLAYER_TARGET.gd" id="4_kc73h"]
[ext_resource type="Script" path="res://core/TARGET_STATES.gd" id="5_06log"]
[ext_resource type="Script" path="res://core/ACTION_EXECUTE.gd" id="5_mmjkh"]

[node name="state_machine" type="Node"]
script = ExtResource("1_fl3r1")

[node name="NO_SELECTION" type="Node" parent="."]
script = ExtResource("2_gw4fy")

[node name="PLAYER_UNIT_SELECT" type="Node" parent="."]
script = ExtResource("3_1o4my")

[node name="PLAYER_TARGET" type="Node" parent="."]
script = ExtResource("4_kc73h")

[node name="ACTION_EXECUTE" type="Node" parent="."]
script = ExtResource("5_mmjkh")

[node name="TARGETING" type="Node" parent="."]
script = ExtResource("5_06log")

[node name="NOT_TARGETING" type="Node" parent="."]
script = ExtResource("2_gw4fy")
